--- a/S1L05_RWD/HTML/Submission.html
+++ b/S1L05_RWD/HTML/Submission.html
@@ -21,7 +21,7 @@
             text-align: center;
         }
 
-        .messageBox { /* Corrected the class name here */
+        .messageBox { 
             background-color: #28a745;
             color: white;
             border-radius: 8px;
